@@ -2,6 +2,11 @@
 
   	* src/mos6502/peeph.def:
   	  Added more peephole rules to remove dead loads.
+   	* src/mos6502/genrshift.c,
+  	  src/mos6502/genlshift.c,
+  	  src/mos6502/genplus.c,
+  	  src/mos6502/genminus.c:
+  	  Cosmetic changes.
   	  
 2025-11-21 Janko Stamenović
 
